# compute-playground

./: Cargo.toml  README.md
.cargo/: config.toml
assets/shaders/: blurr.wgsl  compute.wgsl
src/: image.rs  lib.rs  main.rs  pipeline.rs  stuff.rs
