[workspace]
resolver = "2"
members = []

[package]
name = "compute-playground"
version = "0.1.0"
authors = ["laundmo <laurinschmidt2001@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/laundmo/newton-fractal"
edition = "2021"

[dependencies]
bevy = { version = "0.10", features = [] }
bevy-inspector-egui = { version = "0.18" }
bevy_screen_diagnostics = "0.2.3"
bytemuck = "1.13.1"
rand = "0.8.5"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3
debug = false
